<resources>
    <string name="app_name">TaskControl</string>
    <string name="listof">Lista de</string>
    <string name="projects">Proyectos</string>
    <string name="lorem_description">LoremIpsum es un texto para ejemplificar que hay mucho texto en esta zona de el
        UI
    </string>
    <string name="add_new_project">Nuevo Proyecto</string>
    <string name="description_new_project">Manten el control de tus proyectos personales y profecionales con un sistema
        sencillo para manejar las tareas
    </string>
    <string name="nuevo_proyecto">Nuevo Proyecto</string>
    <string name="name_proyect">Nombre del proyecto</string>
    <string name="description_proyect">Descripcción de el proyecto</string>
    <string name="optional">Opcional</string>
    <string name="add_proyect">Agregar proyecto</string>
    <string name="add_project">Agregar proyecto</string>
    <string name="date_init">Fecha de inicio:</string>
    <string name="project_active">Proyecto Activo</string>
    <string name="project_finish">Proyecto Finalizado</string>
    <string name="title_activity_tasks">TasksActivity</string>
    <string name="tab_to_do">Por hacer</string>
    <string name="tab_doing">Haciendo</string>
    <string name="tab_done">Hecho</string>
    <string name="message_task_created">Tarea creada correctamente</string>
    <string name="name_task">Nombre de la tarea</string>
    <string name="delete_project">Borrar proyecto</string>
    <string name="save">Guardar</string>
    <string name="delete">Eliminar</string>
    <string name="you_are_sure_delete_task">¿Esas seguro de que quieres eliminar esta tarea?</string>
    <string name="add">Agregar</string>
    <string name="description_dialog_new_task">Convierte todas tus ideas y tareas en acciones</string>
    <string name="whats_we_do">¿Que tenemos que hacer?</string>
    <string name="without_date_finish">Sin fecha de finalizacion</string>
    <string name="date_finish">Fecha de finalización</string>
    <string name="hours">Horas</string>
    <string name="hours_to_work">Horas de trabajo</string>
    <string name="need_put_name">La tarea necesita nombre</string>
    <string name="without_time_expected">Sin tiempo establecido</string>
    <string name="time_expected">Tiempo estimado:</string>
    <string name="nueva">Nueva</string>
    <string name="tarea">Tarea</string>
    <string name="hours_of">Horas de</string>
    <string name="job">Trabajo</string>
    <string name="do_not_spesify_hours">No espesificar las horas</string>
    <string name="edit">Editar</string>
    <string name="make_comment">Deja un comentario</string>
    <string name="comment_of_task">Comentario de la tarea</string>
    <string name="ok">Ok</string>
    <string name="without_name">Falta el nombre</string>
</resources>
