<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:text="@string/nueva"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:fontFamily="@font/nunito_sans_bold"
            android:textSize="@dimen/_24sdp"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="@dimen/_60sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <TextView
            android:id="@+id/textTask"
            android:text="@string/tarea"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:fontFamily="@font/nunito_sans_bold"
            android:textSize="@dimen/_60sdp"
            android:textColor="@color/blackBlue"
            android:layout_marginTop="@dimen/_75sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <androidx.cardview.widget.CardView
            android:layout_below="@id/textTask"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
                android:id="@+id/nameTaskEditText"
                android:textSize="@dimen/_14sdp"
                android:layout_margin="@dimen/_10sdp"
                android:hint="@string/whats_we_do"
                android:fontFamily="@font/nunito_sans_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </androidx.cardview.widget.CardView>

</RelativeLayout>