<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:text="@string/hours_of"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:fontFamily="@font/nunito_sans_bold"
            android:textSize="@dimen/_24sdp"
            android:textColor="@color/colorAccent"
            android:layout_marginBottom="@dimen/_190sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <TextView
            android:id="@+id/textTask"
            android:text="@string/job"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:fontFamily="@font/nunito_sans_bold"
            android:textSize="@dimen/_60sdp"
            android:textColor="@color/blackBlue"
            android:layout_marginBottom="@dimen/_125sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <com.example.taskcontrol.Control.SelectorNumber
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/_70sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <CheckBox
            android:id="@+id/checkboxNotHours"
            android:layout_marginBottom="@dimen/_40sdp"
            android:textColor="@color/gray"
            android:fontFamily="@font/nunito_sans_light"
            android:textSize="@dimen/_14sdp"
            android:text="@string/do_not_spesify_hours"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
</RelativeLayout>