<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <FrameLayout
            android:id="@+id/backBox"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_345sdp"/>

    <androidx.cardview.widget.CardView
            android:layout_below="@id/backBox"
            android:layout_centerHorizontal="true"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content">
        <Button
                android:id="@+id/dialogAddTask"
                android:background="@color/green"
                android:textColor="@color/white"
                android:padding="@dimen/_10sdp"
                android:text="@string/add"
                android:fontFamily="@font/nunito_sans_bold"
                android:textAllCaps="false"
                android:textSize="@dimen/_20sdp"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            app:cardCornerRadius="@dimen/_20sdp"
            app:cardElevation="@dimen/_8sdp"
            android:elevation="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
                android:background="@color/blackBlue"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_350sdp">
            <com.airbnb.lottie.LottieAnimationView
                    android:visibility="visible"
                    android:id="@+id/animation_view"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:scaleType="centerCrop"
                    app:lottie_fileName="new_task_animation.json"
                    app:lottie_loop="true"
                    app:lottie_autoPlay="true" />


            <TextView
                    android:fontFamily="@font/nunito_sans_regular"
                    android:textSize="@dimen/_18sdp"
                    android:textColor="@color/whiteBlue"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:text="@string/name_task"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <androidx.cardview.widget.CardView
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    app:cardCornerRadius="@dimen/_5sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <EditText
                        android:id="@+id/dialogNametask"
                        android:inputType="textCapSentences"
                        android:fontFamily="@font/nunito_sans_regular"
                        android:textSize="@dimen/_12sdp"
                        android:hint="@string/whats_we_do"
                        android:layout_margin="@dimen/_5sdp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:layout_marginLeft="@dimen/_20sdp">
                <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/isDateFinish"
                        android:backgroundTint="@color/white"
                        android:buttonTint="@color/white"
                        android:text="@string/date_finish"
                        android:fontFamily="@font/nunito_sans_light"
                        android:textColor="@color/white"
                        android:layout_gravity="center"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"/>
                <com.example.taskcontrol.Control.SelectorNumber
                        android:id="@+id/numberSelector"
                        android:visibility="gone"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_75sdp"
                        android:layout_weight="3"/>
            </LinearLayout>

            <TextView
                    android:text="@string/description_dialog_new_task"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingRight="@dimen/_30sdp"
                    android:paddingLeft="@dimen/_30sdp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp"
                    android:fontFamily="@font/nunito_sans_light"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>