<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <FrameLayout
            android:id="@+id/backBox"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_445sdp"/>

    <androidx.cardview.widget.CardView
            android:layout_below="@id/backBox"
            android:layout_centerHorizontal="true"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content">
        <Button
                android:id="@+id/addTaskDialogFragment"
                android:background="@color/green"
                android:textColor="@color/white"
                android:padding="@dimen/_10sdp"
                android:text="@string/ok"
                android:fontFamily="@font/nunito_sans_bold"
                android:textAllCaps="false"
                android:textSize="@dimen/_20sdp"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            app:cardCornerRadius="@dimen/_20sdp"
            app:cardElevation="@dimen/_8sdp"
            android:elevation="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <RelativeLayout
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_450sdp">

            <TextView
                    android:text="@string/edit"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:fontFamily="@font/nunito_sans_bold"
                    android:textSize="@dimen/_24sdp"
                    android:textColor="@color/colorAccent"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:id="@+id/textTask"
                    android:text="@string/tarea"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:fontFamily="@font/nunito_sans_bold"
                    android:textSize="@dimen/_60sdp"
                    android:textColor="@color/blackBlue"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <LinearLayout
                    android:layout_below="@id/textTask"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_200sdp">
                    <ProgressBar
                            android:id="@+id/drawPorcent"
                            style="?android:attr/progressBarStyleHorizontal"
                            android:layout_centerHorizontal="true"
                            android:layout_width="@dimen/_200sdp"
                            android:layout_height="match_parent"
                            android:max="100"
                            android:progress="60"
                            android:progressDrawable="@drawable/circular_progress_bar"
                            android:secondaryProgress="100"
                            />
                    <TextView
                            android:id="@+id/textPorcent"
                            android:text="60%"
                            android:fontFamily="@font/nunito_sans_black"
                            android:textColor="@color/colorAccent"
                            android:textSize="@dimen/_40sdp"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                </RelativeLayout>
                <SeekBar
                        android:id="@+id/seekbarPercent"
                        android:layout_marginRight="@dimen/_30sdp"
                        android:layout_marginLeft="@dimen/_30sdp"
                        android:progressTint="@color/green"
                        android:thumbTint="@color/colorAccent"
                        android:tickMarkTint="@color/colorAccent"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_20sdp"/>
                <TextView
                        android:text="@string/make_comment"
                        android:textColor="@color/colorAccent"
                        android:fontFamily="@font/nunito_sans_light"
                        android:layout_marginLeft="@dimen/_30sdp"
                        android:layout_marginRight="@dimen/_30sdp"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:textSize="@dimen/_12sdp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                <EditText
                        android:id="@+id/commentTask"
                        android:inputType="textImeMultiLine"
                        android:hint="@string/comment_of_task"
                        android:layout_marginLeft="@dimen/_30sdp"
                        android:layout_marginRight="@dimen/_30sdp"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_45sdp"/>
            </LinearLayout>
            <com.airbnb.lottie.LottieAnimationView
                    android:visibility="visible"
                    android:id="@+id/backgroundCube"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:lottie_fileName="background_cube.json"
                    app:lottie_loop="false"
                    app:lottie_autoPlay="false" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>