<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddProject">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/topBar"
            android:transitionName="layoutMutableTransition"
            android:background="@color/blackBlue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/nuevo_proyecto"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_25sdp"
                android:padding="@dimen/_15sdp"
                android:fontFamily="@font/nunito_sans_bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
            android:id="@+id/nameCardView"
            app:layout_constraintTop_toBottomOf="@id/topBar"
            app:cardCornerRadius="@dimen/_10sdp"
            android:layout_margin="@dimen/_15sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:fontFamily="@font/nunito_sans_regular"
                    android:layout_margin="@dimen/_15sdp"
                    android:textColor="@color/colorAccent"
                    android:text="@string/name_proyect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <EditText
                    android:fontFamily="@font/nunito_sans_regular"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:layout_marginBottom="@dimen/_15sdp"
                    android:textColorHint="@color/colorAccent"
                    android:textColorLink="@color/colorAccent"
                    android:textColorHighlight="@color/colorAccent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            app:layout_constraintTop_toBottomOf="@id/topBar"
            app:cardCornerRadius="@dimen/_10sdp"
            android:layout_margin="@dimen/_15sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:fontFamily="@font/nunito_sans_regular"
                    android:layout_margin="@dimen/_15sdp"
                    android:textSize="@dimen/_18sdp"
                    android:textColor="@color/colorAccent"
                    android:text="@string/name_proyect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <EditText
                    android:id="@+id/nameEditText"
                    android:fontFamily="@font/nunito_sans_regular"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:layout_marginBottom="@dimen/_15sdp"
                    android:textColorHint="@color/colorAccent"
                    android:textColorLink="@color/colorAccent"
                    android:textColorHighlight="@color/colorAccent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            android:id="@+id/descriptionCardView"
            app:layout_constraintTop_toBottomOf="@id/nameCardView"
            app:cardCornerRadius="@dimen/_10sdp"
            android:layout_margin="@dimen/_15sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:fontFamily="@font/nunito_sans_regular"
                    android:layout_margin="@dimen/_15sdp"
                    android:textColor="@color/colorAccent"
                    android:text="@string/description_proyect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <EditText
                    android:id="@+id/descriptionEditText"
                    android:fontFamily="@font/nunito_sans_regular"
                    android:inputType="textMultiLine"
                    android:ems="10"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:layout_marginBottom="@dimen/_15sdp"
                    android:textColorHint="@color/colorAccent"
                    android:textColorLink="@color/colorAccent"
                    android:textColorHighlight="@color/colorAccent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:fontFamily="@font/nunito_sans_regular"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/optional"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <Button
            android:id="@+id/addProyectButton"
            android:text="@string/add_project"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:fontFamily="@font/nunito_sans_light"
            android:padding="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@id/descriptionCardView"
            android:layout_margin="@dimen/_15sdp"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/button_blue_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>